feat(notebook - components): Update language and admin select boilerplate code to use new shared components

--- a/notebooks/climateRational/climateRational.qmd
+++ b/notebooks/climateRational/climateRational.qmd
@@ -33,7 +33,7 @@ md`${_lang(nbText.sections.intro.text)}`; // wrapped in md for lists to work
 `{ojs} _lang(nbText.sections.recentChanges.introText)`
 
 ```{ojs}
-adminForm();
+admin01Form();
 climateForm();
 viewof viewRecentChanges = Inputs.radio(["divergingBar", "warmingStripes", "table"], {
   label: "View Type",
@@ -70,7 +70,7 @@ loaderDiv("plotRecentChanges");
 `{ojs} _lang(nbText.sections.futureProjections.introText)`
 
 ```{ojs}
-adminForm();
+admin01Form();
 climateForm();
 viewof viewFutureChanges = Inputs.radio(["plot", "table"], {
   label: "View Type",
@@ -133,12 +133,16 @@ htl.html`
 
 ## Text and Language Translations
 
+{{< include /components/_lang.qmd >}}
+
 ```{ojs}
 // This cell is to contain all the headings and the notebook title
 nbTitle = _lang({
   en: "Formulate A Climate Rational",
   fr: "Formuler une justification climatique",
 });
+
+nbText = await FileAttachment("/data/climateRationale/nbText.json").json();
 
 heading1 = _lang(general_translations.overview);
 heading2 = _lang(nbText.sections.keyFacts.title);
@@ -147,37 +151,6 @@ heading4 = _lang(nbText.sections.futureProjections.title);
 heading5 = _lang(nbText.sections.hazardExposure.title);
 summary = _lang(general_translations.summary);
 appendix = _lang(general_translations.appendix);
-```
-
-```{ojs}
-import { lang as Lang } from "/helpers/lang.js";
-
-nbText = await FileAttachment("/data/climateRationale/nbText.json").json();
-
-general_translations = await FileAttachment(
-  "/data/shared/generalTranslations.json",
-).json();
-
-languages = [
-  { key: "en", label: "English", locale: 'en-US' },
-  { key: "fr", label: "Français", locale: 'fr-FR' }
-]
-
-defaultLangKey = {
-  const name = "lang";
-  const list = languages.map((d) => d.key);
-  const defaultKey = "en";
-  const queryParam = await Lang.getParamFromList({ name, list });
-  return queryParam ?? defaultKey;
-}
-
-_lang = Lang.lg(masterLanguage.key)
-
-viewof masterLanguage = Inputs.radio(languages, {
-  label: "Main language toggle",
-  format: (d) => d.key,
-  value: languages.find((x) => x.key === defaultLangKey),
-})
 ```
 
 ## General
@@ -680,94 +653,7 @@ exposure_plotData
 
 #### Admin Regions
 
-```{ojs}
-// ADMIN 0
-countries = {
-  const country_list = await FileAttachment("/data/shared/atlas_countries.json").json();
-  const filteredCountries = country_list
-    .filter((c) => c.include && c.iso3c !== "SDN")
-    .map(({ include, ...rest }) => rest);
-  return filteredCountries;
-};
-
-viewof admin0Select = Inputs.select(
-  countries,
-  {
-    format: (d) => d.iso3c,
-  },
-)
-```
-
-```{ojs}
-// Admin1
-dataAdmin1 = {
-  const regions = await db.query(`
-    SELECT DISTINCT admin0_name, admin1_name, iso3
-    FROM historic_climate_timeseries
-    WHERE admin1_name IS NOT null
-    and iso3 = '${admin0Select.iso3c}'
-  `);
-  
-  return [
-    {
-      admin0_name: admin0Select.admin0_name,
-      admin1_name: null,
-      iso3: admin0Select.iso3c
-    },
-    ...regions
-  ]
-  // return regions
-  // AND iso3 in ('${countryMain.join("', '")}')
-}
-
-dataAdmin1
-
-viewof admin1Select = Inputs.select(
-  dataAdmin1,
-    {
-      format: (d) => d.admin1_name
-    }
-)
-```
-
-```{ojs}
-// Admin form generator
-adminForm = () => {
-  const admin0 = Inputs.bind(
-    Inputs.select(
-        countries,
-        {
-          label: _lang(general_translations.country),
-          format: (d) => _lang(d.translation),
-        }
-      ),
-    viewof admin0Select
-  )
-
-  const admin1 = Inputs.bind(
-    Inputs.select(
-        dataAdmin1,
-        {
-          label: _lang(general_translations.region),
-          format: (d) => d.admin1_name,
-        }
-      ),
-    viewof admin1Select
-  )
-
-  return Inputs.form(
-    [
-      admin0,
-      admin1
-    ],
-    {
-      template: inputTemplate()
-    }
-  )
-}
-
-adminForm()
-```
+{{< include /components/_adminSelectors.qmd >}}
 
 #### Climate data
 
