feat(nbData): Modify database loader and nbData json to use a custom filter on VIEW/TABLE creation based on the query fields in the JSON

--- a/notebooks/climateRational/climateRational.qmd
+++ b/notebooks/climateRational/climateRational.qmd
@@ -100,7 +100,9 @@ loaderDiv("plotFutureProjections");
 
 `{ojs} downloadButton(futureProjections_plotData, "futureProjections")`
 
-# `{ojs} heading5` {#hazardExposure}
+# `{ojs} heading5` {#extremeEvents}
+
+# `{ojs} heading6` {#hazardExposure}
 
 `{ojs} _lang(nbText.sections.hazardExposure.introText)`
 
@@ -148,7 +150,8 @@ heading1 = _lang(general_translations.overview);
 heading2 = _lang(nbText.sections.keyFacts.title);
 heading3 = _lang(nbText.sections.recentChanges.title);
 heading4 = _lang(nbText.sections.futureProjections.title);
-heading5 = _lang(nbText.sections.hazardExposure.title);
+heading5 = _lang({ en: "Extreme Events", fr: "Evenements extremes" }); //nbText.sections.extremeEvents.title
+heading6 = _lang(nbText.sections.hazardExposure.title);
 summary = _lang(general_translations.summary);
 appendix = _lang(general_translations.appendix);
 ```
@@ -290,7 +293,11 @@ generateDB = async (data_obj) => {
       // use default query
       query = `CREATE ${view} "${d.key}" AS SELECT * FROM read_parquet("${path}");`;
     } else {
-      query = `CREATE ${view} "${d.key}" AS ${query};`;
+      query = `
+        CREATE ${view} "${d.key}" AS
+          SELECT ${query.select} 
+          FROM read_parquet("${path}")
+          WHERE ${query.where.join(" AND ")};`;
     }
     await _db.query(query);
   }
@@ -580,10 +587,6 @@ exposure_plotData = {
   SELECT *
   FROM exposure
     WHERE 1=1
-    AND admin2_name IS NULL
-    AND tech = 'all'
-    AND exposure = 'vop'
-    AND unit_full = 'nominal-usd-2021'
     ${sqlWhereNull({ field: "iso3", value: cleanAdminInput_SQL(_iso3)})}
     ${sqlWhereNull({ field: "admin1_name", value: cleanAdminInput_SQL(_admin1) })}
   `);
