fix: resolve DuckDB initialization and multi-select errors in CIS notebook
- Fix DuckDB initialization to use insertParquet method
- Change multi-select default values from null to empty arrays
- Fix disabled condition logic for admin selectors
- Remove problematic export statements from helper files

--- a/notebooks/cis/cis_readiness.qmd
+++ b/notebooks/cis/cis_readiness.qmd
@@ -18,6 +18,23 @@ hero_url = "./../../images/default_crop.webp";
 atlasHero(nbTitle, hero_url);
 ```
 
+
+```{ojs}
+cis_readiness = await FileAttachment(
+  "/data/cis_readiness/translations.json",
+).json();
+
+```
+
+
+
+```{ojs}
+overview = _lang(cis_readiness.overview);
+```
+
+# Overview
+`{ojs} overview` 
+
 # Examples
 
 ## Multi Select
