--- a/notebooks/climateRational/climateRational.qmd
+++ b/notebooks/climateRational/climateRational.qmd
@@ -28,6 +28,15 @@ md`${_lang(nbText.sections.intro.text)}`; // wrapped in md for lists to work
 
 `{ojs} _lang(nbText.sections.keyFacts.introText)`
 
+```{ojs}
+admin01Form();
+viewof prod_type = Inputs.select([null, ...Object.keys(exposure_groups)], {format: (d) => d || "All Commodities"});
+
+exposureBars_keyFacts();
+```
+
+`{ojs} downloadButton(exposure_plotData, "commodityProduction")`
+
 # `{ojs} heading3` {#recentChanges}
 
 `{ojs} _lang(nbText.sections.recentChanges.introText)`
@@ -226,7 +235,6 @@ sortByField = (a, b, { field } = {}) => {
 ## Styling
 
 ```{ojs}
-// import { NavbarLangSelector } from "/helpers/uiComponents.ojs"
 function NavbarLangSelector(language_obj, masterLanguage) {
   let navEnd = document.querySelector(".navbar-nav.ms-auto .nav-item.compact");
   if (navEnd) {
@@ -256,18 +264,6 @@ function NavbarLangSelector(language_obj, masterLanguage) {
 }
 
 NavbarLangSelector(languages, masterLanguage)
-```
-
-```{ojs}
-prettyLanguageView = {
-  return Inputs.bind(
-    Inputs.radio(languages, {
-      label: _lang(general_translations.language),
-      format: (d) => d.label
-    }),
-    viewof masterLanguage
-  );
-}
 ```
 
 ## Data
@@ -525,6 +521,11 @@ function aggregateEvents(data, scenario_name) {
   }))
 );
 
+  const categories = ["extreme_low", "unusual_low", "unusual_high", "extreme_high"];
+  const interp = (t) => d3.interpolateRdBu(1 - t);
+  const colors = categories.map((_, i) => interp(i / (categories.length - 1)));
+  const colorScale = d3.scaleOrdinal(categories, colors);
+
 return Plot.plot({
   width: 750,
   height: 420,
@@ -535,17 +536,18 @@ return Plot.plot({
     x: "adminName",
   },
   x: {
-    domain: ["extreme_low", "unusual_low", "unusual_high", "extreme_high"]
+    domain: ["historical", "ssp245", "ssp585"]
   },
   color: {
     legend: true,
-    domain: ["historical", "ssp245", "ssp585"]
+    domain: categories,
+    range: colors
   },
   marks: [
     Plot.barY(longData, {
-      x: "category",
+      x: "scenario",
       y: "value",
-      fill: "scenario",
+      fill: d => colorScale(d.category),
       tip: true
     }),
   ]
@@ -562,16 +564,38 @@ hazardExposure_plotData = {
   const _season = seasonSelect.season;
 
   const resp = await db.query(`
-  SELECT *
+  SELECT
+    iso3,
+    admin0_name,
+    admin1_name,
+    crop,
+    hazard,
+    timeframe,
+    scenario,
+    value
   FROM hazard_exposure
     where 1=1
     AND admin2_name IS NULL
     AND hazard_vars in ('NDWS+NTx35+NDWL0', 'NDWS+THI-max+NDWL0')
+    AND exposure_unit = 'nominal-usd-2021'
     ${sqlWhereNull({ field: "iso3", value: cleanAdminInput_SQL(_iso3)})}
     ${sqlWhereNull({ field: "admin1_name", value: cleanAdminInput_SQL(_admin1) })}
   `);
   
-  return resp
+    const data = resp.map(row => ({
+    ...row,
+    adminName: row.admin1_name
+      ? `${row.admin1_name} (${row.iso3})`
+      : row.iso3
+  }));
+  
+  // Add in total production not exposed
+  const merged = data.map(d => ({
+    ...d,
+    total_value: exposureMap.get(`${d.iso3}|${d.admin1_name}|${d.crop}`) ?? null
+  }));
+
+  return merged
 }
 
 hazardExposure_plotData
@@ -603,53 +627,63 @@ exposure_plotData = {
   return data
 }
 
-exposure_plotData
+exposureMap = new Map(
+  exposure_plotData.map(d => [
+    `${d.iso3}|${d.admin1_name}|${d.crop}`,
+    d.value
+  ])
+);
 ```
 
 ```{ojs}
-{
-  const _data = exposure_plotData;
-
-  return Plot.plot({
-    width,
-    marginLeft: 120,
-    marginBottom: 50,
-    marginTop: 30,
-
-    x: {
-      axis: "bottom",
-      grid: true,
-      percent: true,
-      label: "Value of Production",
-      tickFormat: formatUSD(),
-    },
-
-    y: {
-      label: "Crop",
-    },
-
-    facet: {
-      data: _data,
-      x: "adminName",
-    },
-
-    color: {
-      type: "linear",
-      range: ["#F7D732","#216729"],
-      domain: d3.extent(_data, d => d.value)
-    },
-
-    marks: [
-      Plot.barX(_data, {
-        x: "value",
-        y: "crop",
-        fill: "value",
-        sort: {y: "x", reverse: true},
-        tip: true
-      })
-    ]
-  });
-}
+exposure_groups = new Object({
+  livestock: [
+    "sheep-tropical",
+    "sheep-highland",
+    "goats-tropical",
+    "goats-highland",
+    "pigs-tropical",
+    "pigs-highland",
+    "poultry-tropical",
+    "poultry-highland",
+    "cattle-tropical",
+    "cattle-highland",
+  ],
+  rootsTuber: ["potato", "sweet-potato", "yams", "cassava"],
+  cereals: [
+    "wheat",
+    "rice",
+    "maize",
+    "barley",
+    "pearl-millet",
+    "small-millet",
+    "sorghum",
+  ],
+  legumes: [
+    "bean",
+    "chickpea",
+    "cowpea",
+    "pigeonpea",
+    "lentil",
+    "groundnut",
+    "soybean",
+  ],
+  fruitVeg: ["plantain", "coconut", "banana"],
+  nonEdible: [
+    "cocoa",
+    "rapeseed",
+    "sesameseed",
+    "oilpalm",
+    "cotton",
+    "tea",
+    "tobacco",
+    "arabica-coffee",
+    "sunflower",
+    "sugarcane",
+    "sugarbeet",
+    "robusta-coffee",
+  ],
+});
 ```
 
 ### Global Selectors
@@ -739,6 +773,98 @@ climateForm = () => {
 ```
 
 ## Content
+
+### Key facts
+
+```{ojs}
+exposureBars_keyFacts = function () {
+  const dataCategories = exposure_plotData.map((row) => {
+    const category =
+      Object.entries(exposure_groups).find(([group, crops]) =>
+        crops.includes(row.crop),
+      )?.[0] || "other";
+    return { ...row, category };
+  });
+
+  let _data;
+  // If no prod_type, aggregate by category
+  if (!prod_type) {
+    _data = Array.from(
+      d3.rollup(
+        dataCategories,
+        (v) => d3.sum(v, (d) => d.value),
+        (d) => d.admin0_name,
+        (d) => d.category,
+      ),
+      ([admin0_name, catMap]) =>
+        Array.from(catMap, ([category, value]) => ({
+          admin0_name,
+          crop: category,
+          value,
+        })),
+    ).flat();
+  } else {
+    _data = dataCategories.filter((d) => d.category === prod_type);
+  }
+
+  if (_data.length === 0) {
+    return html`
+      <div style="
+        width: ${width}px;
+        height: 400px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        background: #f5f5f5;
+        border-radius: 4px;
+        color: #666;
+        font-size: 16px;
+      ">
+        No data available for the plot
+      </div>
+    `;
+  }
+
+  return Plot.plot({
+    width,
+    height: 400,
+    marginLeft: 120,
+    marginBottom: 50,
+    marginTop: 30,
+
+    x: {
+      axis: "bottom",
+      grid: true,
+      percent: true,
+      label: "Value of Production",
+      tickFormat: formatUSD(),
+    },
+
+    y: { label: "Category" },
+
+    facet: {
+      data: _data,
+      x: "admin0_name",
+    },
+
+    color: {
+      type: "linear",
+      range: ["#F7D732", "#216729"],
+      domain: d3.extent(_data, (d) => d.value),
+    },
+
+    marks: [
+      Plot.barX(_data, {
+        x: "value", // summed value
+        y: "crop",
+        fill: "value", // color by total
+        sort: { y: "x", reverse: true },
+        tip: true,
+      }),
+    ],
+  });
+};
+```
 
 ### Recent changes
 
@@ -929,6 +1055,8 @@ warmingStripes_recentChanges = () => {
 };
 ```
 
+### futureProjections
+
 ```{ojs}
 scenarioColors = new Object({
   SSP126: "#4FB5B7",
@@ -1045,6 +1173,99 @@ timeseries_futureProjections = () => {
   });
 };
 ```
+
+### extremeEvents
+
+### hazardExposure
+
+```{ojs}
+{
+  const _data = hazardExposure_plotData.filter(
+    (d) =>
+      d.hazard !== "any" &&
+      ["1995-2014", "2021-2040"].includes(d.timeframe) &&
+      ["historic", "ssp245", "ssp585"].includes(d.scenario) &&
+      d.crop !== "generic-crop"
+  );
+
+  const _hazards = [
+    "wet",
+    "dry",
+    "heat",
+    "dry+heat",
+    "dry+wet",
+    "heat+wet",
+    "heat+wet+dry"
+  ];
+  return Plot.plot({
+    width,
+    marginLeft: 100,
+    color: {
+      legend: true,
+      range: [
+        "#4FB5B7",
+        "#FCC42C",
+        "#FC8A34",
+        "#EE624F",
+        "#B34E65",
+        "#8C3E5F",
+        "#523D4E",
+        "#EFEFEF"
+      ],
+      domain: _hazards
+    },
+    x: {
+      ticks: 1,
+      axis: "top",
+      // domain: [0, 100],
+      grid: true
+    },
+    facet: {
+      data: _data,
+      x: "scenario",
+    },
+    marks: [
+      // main y-axis
+      Plot.axisY({
+        tickSize: 0
+      }),
+      // pointer white-out
+      Plot.axisY(
+        Plot.pointerY({
+          fill: "white",
+          textStroke: "white",
+          textStrokeWidth: 2,
+          tickSize: 0
+        })
+      ),
+      // bold pointer
+      Plot.axisY(
+        Plot.pointerY({
+          fontWeight: "bold",
+          tickSize: 0
+        })
+      ),
+      Plot.barX(
+        _data,
+        Plot.stackX(
+          { order: _hazards },
+          {
+            x: (d) => d.value,
+            // x: (d) => (d.value / d.total_value) * 100,
+            y: "crop",
+            fill: "hazard",
+            stroke: "#fff",
+            strokeWidth: 0.25,
+            tip: true
+          }
+        )
+      )
+    ]
+  });
+}
+```
+
+## Tooling
 
 ```{ojs}
 function loaderDiv(id) {
