refactor(section - extremeEvents): Moving code around into more logical sections for the extreme events data / figure

--- a/notebooks/climateRational/climateRational.qmd
+++ b/notebooks/climateRational/climateRational.qmd
@@ -111,6 +111,12 @@ loaderDiv("plotFutureProjections");
 
 # `{ojs} heading5` {#extremeEvents}
 
+```{ojs}
+bars_extremeEvents()
+```
+
+`{ojs} downloadButton(extremeEvents_plotData, "extremeEvents")`
+
 # `{ojs} heading6` {#hazardExposure}
 
 `{ojs} _lang(nbText.sections.hazardExposure.introText)`
@@ -486,7 +492,7 @@ function aggregateEvents(data, scenario_name) {
   return Array.from(groups.values());
 }
 
-{
+extremeEvents_plotData = {
   const historicZ = addZScores(recentChanges_plotData, [
     "iso3",
     "admin1_name",
@@ -507,51 +513,20 @@ function aggregateEvents(data, scenario_name) {
   const data = [...historicData, ...futureData]
 
   const longData = data.flatMap(d =>
-  Object.entries({
-    extreme_low: d.extreme_low,
-    unusual_low: d.unusual_low,
-    unusual_high: d.unusual_high,
-    extreme_high: d.extreme_high
-  }).map(([category, value]) => ({
-    scenario: d.scenario,
-    adminName: d.adminName,
-    hazard: d.hazard,
-    category,
-    value
-  }))
-);
-
-  const categories = ["extreme_low", "unusual_low", "unusual_high", "extreme_high"];
-  const interp = (t) => d3.interpolateRdBu(1 - t);
-  const colors = categories.map((_, i) => interp(i / (categories.length - 1)));
-  const colorScale = d3.scaleOrdinal(categories, colors);
-
-return Plot.plot({
-  width: 750,
-  height: 420,
-  marginLeft: 60,
-  marginBottom: 50,
-  facet: {
-    data: longData,
-    x: "adminName",
-  },
-  x: {
-    domain: ["historical", "ssp245", "ssp585"]
-  },
-  color: {
-    legend: true,
-    domain: categories,
-    range: colors
-  },
-  marks: [
-    Plot.barY(longData, {
-      x: "scenario",
-      y: "value",
-      fill: d => colorScale(d.category),
-      tip: true
-    }),
-  ]
-})
+    Object.entries({
+      extreme_low: d.extreme_low,
+      unusual_low: d.unusual_low,
+      unusual_high: d.unusual_high,
+      extreme_high: d.extreme_high
+    }).map(([category, value]) => ({
+      scenario: d.scenario,
+      adminName: d.adminName,
+      hazard: d.hazard,
+      category,
+      value
+    }))
+  );
+  return longData
 }
 ```
 
@@ -772,7 +747,7 @@ climateForm = () => {
 };
 ```
 
-## Content
+## Figures
 
 ### Key facts
 
@@ -1175,6 +1150,44 @@ timeseries_futureProjections = () => {
 ```
 
 ### extremeEvents
+
+```{ojs}
+bars_extremeEvents = () => {
+  const categories = ["extreme_low", "unusual_low", "unusual_high", "extreme_high"];
+  const interp = (t) => d3.interpolateRdBu(1 - t);
+  const colors = categories.map((_, i) => interp(i / (categories.length - 1)));
+  const colorScale = d3.scaleOrdinal(categories, colors);
+  const _data = extremeEvents_plotData
+
+  return Plot.plot({
+    width: 750,
+    height: 420,
+    marginLeft: 60,
+    marginBottom: 50,
+    facet: {
+      data: _data,
+      x: "adminName",
+    },
+    x: {
+      domain: ["historical", "ssp245", "ssp585"]
+    },
+    color: {
+      legend: true,
+      domain: categories,
+      range: colors
+    },
+    marks: [
+      Plot.barY(_data, {
+        x: "scenario",
+        y: "value",
+        fill: d => colorScale(d.category),
+        tip: true
+      }),
+    ]
+  })
+}
+
+```
 
 ### hazardExposure
 
