feat(section - data): Add prototype data descriptor based on the nbData. Function works with any file following that schema

--- a/notebooks/climateRational/climateRational.qmd
+++ b/notebooks/climateRational/climateRational.qmd
@@ -112,7 +112,12 @@ loaderDiv("plotFutureProjections");
 # `{ojs} heading5` {#extremeEvents}
 
 ```{ojs}
-bars_extremeEvents()
+admin01Form();
+climateForm();
+
+bars_extremeEvents();
+
+extremeEvents_plotData;
 ```
 
 `{ojs} downloadButton(extremeEvents_plotData, "extremeEvents")`
@@ -144,6 +149,33 @@ htl.html`
 `;
 ```
 
+## `{ojs} methodsData` {#methodsData}
+
+### Data Sources
+
+```{ojs}
+data_obj;
+```
+
+<div id="datasets"></div>
+
+```{=html}
+<script type="module">
+  import { buildDatasetDescriptor } from '/components/dataDescriptor.js';
+  
+  const datasets = await fetch("/data/climateRationale/nbData.json").then(response => {
+    if (!response.ok) throw new Error(`Unable to load JSON. Status: ${response.status}`);
+    return response.json();
+  })
+
+console.log("data", datasets.data);
+  document.getElementById("datasets").innerHTML =
+    buildDatasetDescriptor(datasets.data);
+</script>
+```
+
+### Methods
+
 # Source code {#source-code}
 
 <!-- Add .hidden back in to hide -->
@@ -169,6 +201,7 @@ heading5 = _lang({ en: "Extreme Events", fr: "Evenements extremes" }); //nbText.
 heading6 = _lang(nbText.sections.hazardExposure.title);
 summary = _lang(general_translations.summary);
 appendix = _lang(general_translations.appendix);
+methodsData = _lang(general_translations.methodsData);
 ```
 
 ## General
@@ -313,17 +346,15 @@ data_obj = {
   const obj = await FileAttachment("/data/climateRationale/nbData.json").json();
   return obj.data
 }
-data_obj;
-first = new Array(data_obj[0]);
 db = await generateDB(
   // Future projection data is big, so split into different database
-  data_obj.filter((d) => !d.sections.includes("FutureProjections")),
+  data_obj.filter((d) => !d.sections.includes("futureProjections")),
 );
 ```
 
 ```{ojs}
 dbFutureHive = {
-    const fut = data_obj.filter((d) => d.sections.includes("FutureProjections"));
+    const fut = data_obj.filter((d) => d.sections.includes("futureProjections"));
     const _db = await DuckDBClient.of();
     _db.query(`
       CREATE VIEW futureProjections as
@@ -430,7 +461,7 @@ futureProjections_plotData = {
 }
 ```
 
-#### Extreme Events
+#### extremeEvents
 
 ```{ojs}
 function addZScores(data, groupKeys, field = "mean") {
@@ -1153,11 +1184,16 @@ timeseries_futureProjections = () => {
 
 ```{ojs}
 bars_extremeEvents = () => {
-  const categories = ["extreme_low", "unusual_low", "unusual_high", "extreme_high"];
+  const categories = [
+    "extreme_low",
+    "unusual_low",
+    "unusual_high",
+    "extreme_high",
+  ];
   const interp = (t) => d3.interpolateRdBu(1 - t);
   const colors = categories.map((_, i) => interp(i / (categories.length - 1)));
   const colorScale = d3.scaleOrdinal(categories, colors);
-  const _data = extremeEvents_plotData
+  const _data = extremeEvents_plotData;
 
   return Plot.plot({
     width: 750,
@@ -1169,24 +1205,23 @@ bars_extremeEvents = () => {
       x: "adminName",
     },
     x: {
-      domain: ["historical", "ssp245", "ssp585"]
+      domain: ["historical", "ssp245", "ssp585"],
     },
     color: {
       legend: true,
       domain: categories,
-      range: colors
+      range: colors,
     },
     marks: [
       Plot.barY(_data, {
         x: "scenario",
         y: "value",
-        fill: d => colorScale(d.category),
-        tip: true
+        fill: (d) => colorScale(d.category),
+        tip: true,
       }),
-    ]
-  })
-}
-
+    ],
+  });
+};
 ```
 
 ### hazardExposure
@@ -1309,3 +1344,88 @@ function loaderDiv(id) {
   `;
 }
 ```
+
+<style>
+  .dataset-card {
+    border: 1px solid #ddd;
+    border-radius: 8px;
+    padding: 1rem 1.25rem;
+    margin-bottom: 1rem;
+    background: #fff;
+  }
+
+  .dataset-header {
+    display: flex;
+    justify-content: space-between;
+    align-items: baseline;
+    margin-bottom: 0.25rem;
+  }
+
+  .dataset-title {
+    margin: 0;
+    font-size: 1.1rem;
+  }
+
+  .dataset-description {
+    margin: 0.25rem 0 0.75rem;
+    color: #444;
+  }
+
+  .dataset-meta {
+    margin: 0 0 0.75rem;
+  }
+
+  .dataset-meta dt {
+    font-weight: 600;
+    font-size: 0.85rem;
+    margin-bottom: 0.1rem;
+  }
+
+  .dataset-meta dd {
+    margin: 0 0 0.5rem;
+    font-size: 0.85rem;
+  }
+
+  .dataset-s3-path {
+    font-family: monospace;
+    font-size: 0.8rem;
+    padding: 0.1rem 0.25rem;
+    background: #f5f5f5;
+    border-radius: 4px;
+  }
+
+  .dataset-section-link {
+    text-decoration: none;
+    color: #0366d6;
+  }
+
+  .dataset-section-link:hover {
+    text-decoration: underline;
+  }
+
+  .dataset-actions {
+    display: flex;
+    gap: 0.5rem;
+    margin-top: 0.5rem;
+  }
+
+  .dataset-download-btn,
+  .dataset-copy-btn {
+    font-size: 0.8rem;
+    padding: 0.35rem 0.7rem;
+    border-radius: 4px;
+    border: 1px solid #ccc;
+    background: #f8f8f8;
+    cursor: pointer;
+  }
+
+  .dataset-download-btn:hover,
+  .dataset-copy-btn:hover {
+    background: #eee;
+  }
+
+  .dataset-download-btn[disabled] {
+    opacity: 0.6;
+    cursor: not-allowed;
+  }
+</style>
