refactor(section - exposure): Move the exposure data into correct section

--- a/notebooks/climateRational/climateRational.qmd
+++ b/notebooks/climateRational/climateRational.qmd
@@ -30,9 +30,12 @@ md`${_lang(nbText.sections.intro.text)}`; // wrapped in md for lists to work
 
 ```{ojs}
 admin01Form();
+
 viewof prod_type = Inputs.select([null, ...Object.keys(exposure_groups)], {format: (d) => d || "All Commodities"});
 
 exposureBars_keyFacts();
+
+exposure_plotData
 ```
 
 `{ojs} downloadButton(exposure_plotData, "commodityProduction")`
@@ -168,7 +171,7 @@ data_obj;
     return response.json();
   })
 
-console.log("data", datasets.data);
+  console.log("data", datasets.data);
   document.getElementById("datasets").innerHTML =
     buildDatasetDescriptor(datasets.data);
 </script>
@@ -369,7 +372,94 @@ dbFutureHive = {
 
 ### Sections
 
-#### recentChanges
+#### data - keyFacts
+
+```{ojs}
+exposure_plotData = {
+  const _iso3 = admin0Select.iso3c;
+  const _admin1 = admin1Select.admin1_name;
+  const _season = seasonSelect.season;
+
+  const resp = await db.query(`
+  SELECT *
+  FROM exposure
+    WHERE 1=1
+    ${sqlWhereNull({ field: "iso3", value: cleanAdminInput_SQL(_iso3)})}
+    ${sqlWhereNull({ field: "admin1_name", value: cleanAdminInput_SQL(_admin1) })}
+  `);
+
+  const data = resp.map(row => ({
+    ...row,
+    adminName: row.admin1_name
+      ? `${row.admin1_name} (${row.iso3})`
+      : row.iso3
+  }));
+
+
+  
+  return data
+}
+
+exposureMap = new Map(
+  exposure_plotData.map(d => [
+    `${d.iso3}|${d.admin1_name}|${d.crop}`,
+    d.value
+  ])
+);
+```
+
+```{ojs}
+exposure_groups = new Object({
+  livestock: [
+    "sheep-tropical",
+    "sheep-highland",
+    "goats-tropical",
+    "goats-highland",
+    "pigs-tropical",
+    "pigs-highland",
+    "poultry-tropical",
+    "poultry-highland",
+    "cattle-tropical",
+    "cattle-highland",
+  ],
+  rootsTuber: ["potato", "sweet-potato", "yams", "cassava"],
+  cereals: [
+    "wheat",
+    "rice",
+    "maize",
+    "barley",
+    "pearl-millet",
+    "small-millet",
+    "sorghum",
+  ],
+  legumes: [
+    "bean",
+    "chickpea",
+    "cowpea",
+    "pigeonpea",
+    "lentil",
+    "groundnut",
+    "soybean",
+  ],
+  fruitVeg: ["plantain", "coconut", "banana"],
+  nonEdible: [
+    "cocoa",
+    "rapeseed",
+    "sesameseed",
+    "oilpalm",
+    "cotton",
+    "tea",
+    "tobacco",
+    "arabica-coffee",
+    "sunflower",
+    "sugarcane",
+    "sugarbeet",
+    "robusta-coffee",
+  ],
+});
+```
+
+#### data - recentChanges
 
 ```{ojs}
 recentChanges_plotData = {
@@ -411,7 +501,7 @@ recentChanges_plotData = {
 recentChanges_plotData
 ```
 
-#### futureProjections
+#### data - futureProjections
 
 ```{ojs}
 futureProjections_plotData = {
@@ -461,7 +551,7 @@ futureProjections_plotData = {
 }
 ```
 
-#### extremeEvents
+#### data - extremeEvents
 
 ```{ojs}
 function addZScores(data, groupKeys, field = "mean") {
@@ -561,7 +651,7 @@ extremeEvents_plotData = {
 }
 ```
 
-#### hazardExposure
+#### data - hazardExposure
 
 ```{ojs}
 hazardExposure_plotData = {
@@ -605,91 +695,6 @@ hazardExposure_plotData = {
 }
 
 hazardExposure_plotData
-```
-
-```{ojs}
-exposure_plotData = {
-  const _iso3 = admin0Select.iso3c;
-  const _admin1 = admin1Select.admin1_name;
-  const _season = seasonSelect.season;
-
-  const resp = await db.query(`
-  SELECT *
-  FROM exposure
-    WHERE 1=1
-    ${sqlWhereNull({ field: "iso3", value: cleanAdminInput_SQL(_iso3)})}
-    ${sqlWhereNull({ field: "admin1_name", value: cleanAdminInput_SQL(_admin1) })}
-  `);
-
-  const data = resp.map(row => ({
-    ...row,
-    adminName: row.admin1_name
-      ? `${row.admin1_name} (${row.iso3})`
-      : row.iso3
-  }));
-
-
-  
-  return data
-}
-
-exposureMap = new Map(
-  exposure_plotData.map(d => [
-    `${d.iso3}|${d.admin1_name}|${d.crop}`,
-    d.value
-  ])
-);
-```
-
-```{ojs}
-exposure_groups = new Object({
-  livestock: [
-    "sheep-tropical",
-    "sheep-highland",
-    "goats-tropical",
-    "goats-highland",
-    "pigs-tropical",
-    "pigs-highland",
-    "poultry-tropical",
-    "poultry-highland",
-    "cattle-tropical",
-    "cattle-highland",
-  ],
-  rootsTuber: ["potato", "sweet-potato", "yams", "cassava"],
-  cereals: [
-    "wheat",
-    "rice",
-    "maize",
-    "barley",
-    "pearl-millet",
-    "small-millet",
-    "sorghum",
-  ],
-  legumes: [
-    "bean",
-    "chickpea",
-    "cowpea",
-    "pigeonpea",
-    "lentil",
-    "groundnut",
-    "soybean",
-  ],
-  fruitVeg: ["plantain", "coconut", "banana"],
-  nonEdible: [
-    "cocoa",
-    "rapeseed",
-    "sesameseed",
-    "oilpalm",
-    "cotton",
-    "tea",
-    "tobacco",
-    "arabica-coffee",
-    "sunflower",
-    "sugarcane",
-    "sugarbeet",
-    "robusta-coffee",
-  ],
-});
 ```
 
 ### Global Selectors
