feat: add translations for the overview

--- a/notebooks/cis/cis_readiness.qmd
+++ b/notebooks/cis/cis_readiness.qmd
@@ -20,20 +20,21 @@ atlasHero(nbTitle, hero_url);
 
 
 ```{ojs}
-cis_readiness = await FileAttachment(
-  "/data/cis_readiness/translations.json",
+cis = await FileAttachment(
+  "/data/cis/translations.json",
 ).json();
 
 ```
 
-
-
 ```{ojs}
-overview = _lang(cis_readiness.overview);
+overviewTitle = _lang(cis.overviewTitle);
+overviewContent = _lang(cis.overviewContent);
 ```
 
-# Overview
-`{ojs} overview` 
+
+# `{ojs} overviewTitle` {#overviewTitle}
+
+`{ojs} overviewContent` 
 
 # Examples
 
